@@ -80,7 +80,7 @@ void set_osd_subtitle(subtitle *subs);
 int cfg_inc_verbose(m_option_t *conf);
 int cfg_include(m_option_t *conf, const char *filename);
 
-void common_preinit(void);
+void common_preinit(int *argc_ptr, char **argv_ptr[]);
 int common_init(void);
 
 double calc_a_pts(struct sh_audio *sh_audio, demux_stream_t *d_audio);
