@@ -26,6 +26,10 @@
 #if HAVE_SETMODE
 #include <io.h>
 #endif
+#ifdef __MINGW32__
+#include <windows.h>
+#include <share.h>
+#endif
 
 #include "mp_msg.h"
 #include "stream.h"
@@ -114,6 +118,28 @@ static int control(stream_t *s, int cmd, void *arg) {
   return STREAM_UNSUPPORTED;
 }
 
+#ifdef __MINGW32__
+static int win32_open(const char *fname, int m, int omode)
+{
+    int cnt;
+    int fd = -1;
+    wchar_t fname_w[MAX_PATH];
+    int WINAPI (*mb2wc)(UINT, DWORD, LPCSTR, int, LPWSTR, int) = NULL;
+    HMODULE kernel32 = GetModuleHandle("Kernel32.dll");
+    if (!kernel32) goto fallback;
+    mb2wc = GetProcAddress(kernel32, "MultiByteToWideChar");
+    if (!mb2wc) goto fallback;
+    cnt = mb2wc(CP_UTF8, MB_ERR_INVALID_CHARS, fname, -1, fname_w, sizeof(fname_w) / sizeof(*fname_w));
+    if (cnt <= 0) goto fallback;
+    fd = _wsopen(fname_w, m, SH_DENYNO, omode);
+    if (fd != -1 || (m & O_CREAT))
+        return fd;
+
+fallback:
+    return _sopen(fname, m, SH_DENYNO, omode);
+}
+#endif
+
 static int open_f(stream_t *stream,int mode, void* opts, int* file_format) {
   int f;
   mode_t m = 0;
@@ -168,10 +194,12 @@ static int open_f(stream_t *stream,int mode, void* opts, int* file_format) {
     }
   } else {
       mode_t openmode = S_IRUSR|S_IWUSR;
-#ifndef __MINGW32__
+#ifdef __MINGW32__
+      f = win32_open(filename, m, openmode);
+#else
       openmode |= S_IRGRP|S_IWGRP|S_IROTH|S_IWOTH;
-#endif
       f=open(filename,m, openmode);
+#endif
     if(f<0) {
       mp_msg(MSGT_OPEN,MSGL_ERR,MSGTR_FileNotFound,filename);
       m_struct_free(&stream_opts,opts);
